--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  flex-direction: column;
+  gap: 30px;
 }
 iframe {
   scale: 3;
 }
+    
